Squashed 'subjobs/rnaseq_workflow/' changes from 2f7f147..cd99e37
cd99e37 trimmed fastqs should not be stored

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: cd99e37e4b71cd808e4a714431bd1c69119bd736

--- a/substeps/prefilter/Snakefile
+++ b/substeps/prefilter/Snakefile
@@ -52,10 +52,7 @@ trimmed_fastq_files = expand(
     read=[1, 2]
 )
 
-required_files = trimmed_fastq_files
-
-print(required_files)
-
+required_files = []
 
 # -- rules
 
