Squashed 'subjobs/rnaseq_workflow/' changes from 6c18a3e..f5e73cc
f5e73cc featureCounts output to data/job/<workflow>/align

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: f5e73ccceea9a772fb2821dce6b382178b478401

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -70,7 +70,7 @@ trimmed_fastq_files = expand(
 
 feature_counts_files = expand(
     join(
-        "data", "job", "{unit.study_id}", "{unit.sample_id}",
+        "data", "job", "align", "{unit.study_id}", "{unit.sample_id}",
         "{unit.run_id}_{unit.lane_id}.fcount.short"
     ),
     unit=rnaseq_samples.itertuples()
