--- a/conf/rnaseq_workflow/reference_params.yaml
+++ b/conf/rnaseq_workflow/reference_params.yaml
@@ -1,3 +1,3 @@
-index: data/ext/genomes/GRCh38/hisat2/genome_tran
+hisat2_index: data/ext/genomes/GRCh38/hisat2/genome_tran
 annotation: data/ext/genomes/GRCh38/ensembl.v84/Homo_sapiens.GRCh38.84.gtf.gz
 
