Squashed 'subjobs/rnaseq_workflow/' changes from a3baf5a..64a87ad
64a87ad add fastqc report for raw and trimmed fastq
388127f check-these-dirs is now a yaml

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 64a87adee6552d9be0f863dcd2727cb6b1b0180c

--- a/.sidekick/setup/check_these_dirs.yaml
+++ b/.sidekick/setup/check_these_dirs.yaml
@@ -1,19 +1,19 @@
 # External directories that must exist prior to running the workflow
 
-# File format:
-# - ^path/to/dir/to_be_checked$
+# File format is YAML:
+# - path/to/dir/to_be_checked$
 # - One line per directory
 # - Paths relative to working directory (ie, the dir containing conf/ doc/
 # scripts/ etc)
 
 # Example:
-# ../infx_scripts
-# ../infx_scripts/r_functions
+# - ../infx_scripts
+# - ../infx_scripts/r_functions
 
 # data directories
-../../data/int/fastq/
-../../data/job/
+- ../../data/int/fastq/
+- ../../data/job/
 
 # config directories
-../../conf/rnaseq_workflow
-../../logs/rnaseq_workflow
+- ../../conf/rnaseq_workflow
+- ../../logs/rnaseq_workflow
