Squashed 'subjobs/rnaseq_workflow/' changes from 64a87ad..991a54e
991a54e fix typo

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 991a54ea67ffa9b2099bc3bcd4cc8c4e01b8a352

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -94,7 +94,7 @@ feature_counts_files = expand(
         "{directory_prefix}", "{unit.study_id}", "{unit.sample_id}",
         "{unit.run_id}_{unit.lane_id}.fcount.short"
     ),
-    directory_prefix=[os.path.join(job_dir, "align")]
+    directory_prefix=[os.path.join(job_dir, "align")],
     unit=sequencing_samples.itertuples()
 )
 
