Squashed 'subjobs/rnaseq_workflow/' changes from 8db9e5f..112beda
112beda fix bug: appending string to list

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 112beda661ed4ce69df42263e59c521aca9cd4cc

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -140,7 +140,7 @@ multiqc_report = os.path.join(
 required_files = \
     feature_counts_files + \
     qc_reports + \
-    multiqc_report
+    [multiqc_report]
 
 ###############################################################################
 
