Squashed 'subjobs/rnaseq_workflow/' changes from 112beda..53fcbba
53fcbba `qc` substep (#19)
REVERT: 112beda fix bug: appending string to list
REVERT: 8db9e5f add fake target based on qc substep
REVERT: 1cde64d add `qc` substep to pull all qc reports together
REVERT: ed6969d make `multiqc` report from `fastqc` reports

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 53fcbba1cd3a778f142f6be96d24bbb13959fe4b

--- a/substeps/qc/Snakefile
+++ b/substeps/qc/Snakefile
@@ -21,8 +21,7 @@ rule filter_and_align_report:
     output: "data/job/multiqc/filter_and_align.html"
     shell:
         """
-        ln -rs {input} {output}
-        touch -h {output}
+        ln -rs {input} {output} && touch -h {output}
         """
 
 rule fake_report:
