Squashed 'subjobs/rnaseq_workflow/' changes from 73110c5..88159cd
88159cd add `hisat2` alignment reports to `multiqc`

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 88159cdb2fa2fadc371e0fd2d97465f786f277f3

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -109,7 +109,7 @@ feature_counts_files = expand(
 
 qc_reports = get_filter_and_align_reports(
     sequencing_samples=sequencing_samples, read_dirs=read_dirs,
-    fastqc_dirs=fastqc_dirs
+    fastqc_dirs=fastqc_dirs, align_dirs=align_dirs
 )
 
 # A QC report that combines all single-sample QC reports
