--- a/conf/rnaseq_workflow/reference_params.yaml
+++ b/conf/rnaseq_workflow/reference_params.yaml
@@ -1,3 +1,9 @@
+# the RNA-Seq alignment reference (for use in HISAT2)
 hisat2_index: data/ext/genomes/GRCh38/hisat2/genome_tran
+
+# the ensembl annotations for the genomic / transcriptomic reference
 annotation: data/ext/genomes/GRCh38/ensembl.v84/Homo_sapiens.GRCh38.84.gtf.gz
+annotation_version: "84"
+# the biomaRt name for accessing ensembl-annotations
+biomart_dataset: "hsapiens_gene_ensembl"
 
