Squashed 'subjobs/rnaseq_workflow/' changes from d952d07..786c9d0
786c9d0 add steps to merge and duplicate mark the bam files
e367103 add reports for featureCounts and markDuplicates to multiqc input
4f06af3 run featureCounts in several ways
35f7ac2 add rules to sort / merge bam files
8ede783 add read-groups during hisat2 alignment
77f0d71 add recipe for running picard MarkDuplicates
REVERT: d952d07 fix bug in feature_count subset
REVERT: 4066952 import all packages that are stated in code
REVERT: 25eb6f4 explicit use of readr
REVERT: 04db62f add a notebook to provide generic report
REVERT: a71ecb7 further requirements for running the workflow

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 786c9d0dbd75b00cc503fe8400a7cb532a1a8400

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -86,7 +86,17 @@ fastqc_dirs = {
 
 align_dirs = {
     "prefix": join(job_dir, "align"),
-    "initial": join(job_dir, "align")
+    "initial": join(job_dir, "align"),
+    "coordsort": join(job_dir, "sort"),
+    "merge": join(job_dir, "merge"),
+    "markdup": join(job_dir, "markdup")
+}
+
+quantify_dirs = {
+    "input": align_dirs["markdup"],
+    "with_dups": join(job_dir, "quantify", "with_duplicates"),
+    "without_dups": join(job_dir, "quantify", "without_duplicates"),
+    "with_multimaps": join(job_dir, "quantify", "with_multimaps")
 }
 
 # -- required files
@@ -99,7 +109,9 @@ feature_counts_files = expand(
         "{directory_prefix}", "{unit.study_id}", "{unit.sample_id}",
         "{unit.run_id}_{unit.lane_id}.fcount.short"
     ),
-    directory_prefix=align_dirs["initial"],
+    directory_prefix=[
+        quantify_dirs[k] for k in ["with_dups", "without_dups", "with_multimaps"]
+    ],
     unit=sequencing_samples.itertuples()
 )
 
@@ -112,8 +124,16 @@ annotation_files = [
 #   (sample, run, lane, read direction)
 
 qc_reports = get_filter_and_align_reports(
-    sequencing_samples=sequencing_samples, read_dirs=read_dirs,
-    fastqc_dirs=fastqc_dirs, align_dirs=align_dirs
+    sequencing_samples=sequencing_samples,
+    # cutadapt reports for trimming reads
+    read_dirs=read_dirs,
+    # fastqc reports for raw reads and trimmed reads
+    fastqc_dirs=fastqc_dirs,
+    # hisat2 and markDuplicates reports for aligned samples
+    align_dirs=align_dirs,
+    # featureCounts reports for aligned samples (TODO: separate with_dups,
+    # without_dups and with_multimaps reports)
+    quantify_dirs=quantify_dirs
 )
 
 # A QC report that combines all single-sample QC reports
@@ -125,26 +145,13 @@ multiqc_report = os.path.join(
     job_dir, "multiqc", "filter_and_align.html"
 )
 
-# A report on the filter/align substep in Rmarkdown; this constructs some
-# datasets for use in subsequent substeps: the raw DGEList of counts for
-# example
-
-rmarkdown_report = os.path.join("doc", "notebook.pdf")
-rmarkdown_prereqs = [
-    # TODO: ensembl_gene_details.tsv, all fcount.short files
-]
-rmarkdown_result_regexes = []
-rmarkdown_results = []
-
-docs = [multiqc_report, rmarkdown_report]
-
 # ---- final list of required files
 
 required_files = \
     feature_counts_files + \
     annotation_files + \
     qc_reports + \
-    docs
+    [multiqc_report]
 
 ###############################################################################
 
@@ -170,7 +177,9 @@ include: "scripts/snake_recipes/align_hisat2.smk"
 include: "scripts/snake_recipes/quantify_subread.smk"
 include: "scripts/snake_recipes/quality_fastqc.smk"
 include: "scripts/snake_recipes/quality_multiqc.smk"
-include: "scripts/snake_recipes/rmarkdown.smk"
+
+include: "scripts/snake_recipes/coordsort_picard.smk"
+include: "scripts/snake_recipes/mergesam_picard.smk"
 
 # -- local rules
 
