Squashed 'subjobs/rnaseq_workflow/' changes from eb11d4b..f6178f5
f6178f5 alignments should all be subdirs of data/job/align/

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: f6178f5b14caf8faf156c4ecc88bc415176a73d6

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -86,10 +86,10 @@ fastqc_dirs = {
 
 align_dirs = {
     "prefix": join(job_dir, "align"),
-    "initial": join(job_dir, "align"),
-    "coordsort": join(job_dir, "sort"),
-    "merge": join(job_dir, "merge"),
-    "markdup": join(job_dir, "markdup")
+    "initial": join(job_dir, "align", "initial"),
+    "coordsort": join(job_dir, "align", "sort"),
+    "merge": join(job_dir, "align", "merge"),
+    "markdup": join(job_dir, "align", "markdup")
 }
 
 quantify_dirs = {
