Squashed 'subjobs/rnaseq_workflow/' changes from f6178f5..652a831
652a831 feature counts should be ran on merged files

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 652a831375e6e3489fec95582c0b1e28a06a5dd6

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -107,7 +107,7 @@ quantify_dirs = {
 feature_counts_files = expand(
     join(
         "{directory_prefix}", "{unit.study_id}", "{unit.sample_id}",
-        "{unit.run_id}_{unit.lane_id}.fcount.short"
+        "{unit.run_id}.fcount.short"
     ),
     directory_prefix=[
         quantify_dirs[k] for k in ["with_dups", "without_dups", "with_multimaps"]
