Squashed 'subjobs/rnaseq_workflow/' changes from 652a831..be27f64
be27f64 import markduplicates script

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: be27f6494c0bbc10136ca1410c14e2ad4c0f90f0

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -180,6 +180,7 @@ include: "scripts/snake_recipes/quality_multiqc.smk"
 
 include: "scripts/snake_recipes/coordsort_picard.smk"
 include: "scripts/snake_recipes/mergesam_picard.smk"
+include: "scripts/snake_recipes/markduplicates_picard.smk"
 
 # -- local rules
 
