--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -87,13 +87,14 @@ fastqc_dirs = {
 align_dirs = {
     "prefix": join(job_dir, "align"),
     "initial": join(job_dir, "align", "initial"),
-    "coordsort": join(job_dir, "align", "sort"),
+    "coordsort": join(job_dir, "align", "coordsort"),
     "merge": join(job_dir, "align", "merge"),
-    "markdup": join(job_dir, "align", "markdup")
+    "markdup": join(job_dir, "align", "markdup"),
+    "querysort": join(job_dir, "align", "querysort")
 }
 
 quantify_dirs = {
-    "input": align_dirs["markdup"],
+    "input": align_dirs["querysort"],
     "with_dups": join(job_dir, "quantify", "with_duplicates"),
     "without_dups": join(job_dir, "quantify", "without_duplicates"),
     "with_multimaps": join(job_dir, "quantify", "with_multimaps")
@@ -179,6 +180,7 @@ include: "scripts/snake_recipes/quality_fastqc.smk"
 include: "scripts/snake_recipes/quality_multiqc.smk"
 
 include: "scripts/snake_recipes/coordsort_picard.smk"
+include: "scripts/snake_recipes/querysort_picard.smk"
 include: "scripts/snake_recipes/mergesam_picard.smk"
 include: "scripts/snake_recipes/markduplicates_picard.smk"
 
