--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -188,6 +188,7 @@ include: "scripts/snake_recipes/align_hisat2.smk"
 include: "scripts/snake_recipes/quantify_subread.smk"
 include: "scripts/snake_recipes/quality_fastqc.smk"
 include: "scripts/snake_recipes/quality_multiqc.smk"
+include: "scripts/snake_recipes/quality_gene_body_coverage.smk"
 
 include: "scripts/snake_recipes/coordsort_picard.smk"
 include: "scripts/snake_recipes/querysort_picard.smk"
