Squashed 'subjobs/rnaseq_workflow/' changes from f24c014..29b292e
29b292e create *.bam.bai within gene_body_coverage rule

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 29b292ec484d14c1b7d7584bddca66e92df5c373

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -85,7 +85,8 @@ qc_dirs = {
     "trimmed": join(job_dir, "fastqc", "trimmed_fastqs")
   },
   "rseqc": {
-    "prefix": join(job_dir, "rseqc")
+    "prefix": join(job_dir, "rseqc"),
+    "gene_body_coverage": join(job_dir, "rseqc", "gene_body_coverage")
   },
   "multiqc": {
     "prefix": join(job_dir, "multiqc")
