Squashed 'subjobs/rnaseq_workflow/' changes from 29b292e..3cfc39a
3cfc39a define contents of the 3 main snakemake scripts subdirs
2bce165 move `ensembl_gene_details` rule out of Snakefile
0f45728 set gtf to ancient()
6e8e211 add memory-resources to markDuplicates rule

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 3cfc39a36afabb91f1222df17cfc3a645b6030ea

--- a/substeps/filter_and_align/Snakefile
+++ b/substeps/filter_and_align/Snakefile
@@ -196,26 +196,6 @@ include: "scripts/snake_recipes/querysort_picard.smk"
 include: "scripts/snake_recipes/mergesam_picard.smk"
 include: "scripts/snake_recipes/markduplicates_picard.smk"
 
-# -- local rules
+include: "scripts/snake_recipes/ensembl_gene_details.smk"
 
-rule ensembl_gene_details:
-    message:
-        """
-        --- Extract gene-information from ensembl database and ensembl gtf: GC
-            content, gene-type etc
-        """
-
-    input:
-        gtf = reference_params["annotation"]
-
-    output:
-        tsv = os.path.join(
-            job_dir, "annotations", "ensembl_gene_details.tsv"
-        )
-
-    params:
-        ensembl_version = reference_params["annotation_version"],
-        ensembl_dataset = reference_params["biomart_dataset"]
-
-    script:
-        "scripts/snake_recipes/get_ensembl_gene_details.smk.R"
+###############################################################################
